Add a filter pipe to bed page for searching
Issue: #9

--- a/client/src/app/plants/bed.component.html
+++ b/client/src/app/plants/bed.component.html
@@ -1,21 +1,14 @@
-<garden-navbar-component></garden-navbar-component>
+<garden-navbar-component #nav></garden-navbar-component>
 
 <ul class="list-group">
-
     <li class="list-group-item list-group-item-info">
-        <span >Flowers</span>
-
+        <span>Flowers</span>
     </li>
-
-
-
-    <li *ngFor="let plant of plants"  class="list-group-item">
+    <li *ngFor="let plant of plants | filterBy: {commonName: nav.currentCN}"  class="list-group-item">
         <!--Button is a hyperlink to a plant page "/plants/:plantID"-->
         <!--See app.routes.ts-->
         <button [routerLink]="['/plants', plant.id, {srcBed:bed}]" style="white-space: normal" class="btn btn-link btn-block" >
             <strong style="font-size:18px">{{plant.cultivar}}</strong><br>
             {{plant.commonName}}</button>
-
     </li>
-
 </ul>
