--- a/client/src/app/admin/import.component.html
+++ b/client/src/app/admin/import.component.html
@@ -1,19 +1,25 @@
-<navbar-component></navbar-component>
+<div class="import-page">
+    <h2>Import Spreadsheet</h2>
 
-<h2>Import Spreadsheet</h2>
-
-<file-upload #fu (change)="filename = undefined; uploadAttempted = false" [multiple]="false">-</file-upload>
+    <file-upload #fu (change)="filename = undefined; uploadAttempted = false" [multiple]="false">-</file-upload>
 
 
-<button *ngIf="filename === undefined" class="btn btn-primary" (click)="this.handleUpload()" style="margin-top: 10px">
-    <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
-    Import
-</button>
+    <button *ngIf="filename === undefined" class="btn btn-primary" (click)="this.handleUpload()" style="margin-top: 10px">
+        <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
+        Import
+    </button>
 
-<div *ngIf="filename!==undefined"> Your file was successfully uploaded as data set {{this.filename}}.
+    <div *ngIf="filename!==undefined"> Your file was successfully uploaded as data set {{this.filename}}.
+    </div>
+    <div *ngIf="filename === undefined && uploadAttempted === true">File upload failed.</div>
+
+    <div>
+        <button  [routerLink]="['/admin']" class="btn btn-primary" style="float: right">Back to Admin Page</button>
+    </div>
 </div>
-<div *ngIf="filename === undefined && uploadAttempted === true">File upload failed.</div>
 
-<div>
-<button  [routerLink]="['/admin']" class="btn btn-primary" style="float: right">Back to Admin Page</button>
-</div>
+<style>
+    .import-page {
+        margin-top: -55%;
+    }
+</style>
