--- a/client/src/app/navbar/garden-navbar.component.html
+++ b/client/src/app/navbar/garden-navbar.component.html
@@ -30,6 +30,7 @@
         align-items: center;
         padding-top: 8px;
         padding-bottom: 8px;
+        padding-left: 10px;
     }
 
     .bed-tab {
