--- a/client/src/app/navbar/garden-navbar.component.html
+++ b/client/src/app/navbar/garden-navbar.component.html
@@ -31,6 +31,7 @@
         padding-top: 8px;
         padding-bottom: 8px;
         padding-left: 10px;
+        height: 45px;
     }
 
     .bed-tab {
