Set column widths to appropiate sizes also fixed a problem with downloading excel file
Issue #28

--- a/client/src/app/admin/export.component.html
+++ b/client/src/app/admin/export.component.html
@@ -13,7 +13,7 @@
                 {{ uploadId }}
             </div>
             <div class="col-sm-4">
-                <a [attr.href]="this.url + uploadId">
+                <a [attr.href]="this.url + uploadId" target="_blank">
                     <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
                     Download feedback for this data set
                 </a>
