Add brief info about the garden
issue #12

--- a/client/src/app/homepage/homepage.component.html
+++ b/client/src/app/homepage/homepage.component.html
@@ -18,6 +18,11 @@
     </table>
 </div>
 
+<br/>
+<p>The Horticulture Display Garden at the West Central Research and Outreach Center (WCROC) expands nearly three acres of beautifully landscaped garden beds and attractions.
+    The garden includes plantings and research from several plant breeding companies from around the world.</p>
+    We invite you to look, smell and touch, but <i>please do not dig, pick or cut any flowers or plant materials.</i>
+
 <!--Todo Add instructions :)-->
 
 <h3> See the flowers in a specific bed in two steps using our QR-Codes!</h3>
