Change searchbar placeholder
Issue: #12

--- a/client/src/app/navbar/garden-navbar.component.html
+++ b/client/src/app/navbar/garden-navbar.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="row search-tab">
         <div class="searchField col-xs-8">
-            <input type="text" placeholder="Type a flower name" class="form-control search-field"
+            <input type="text" placeholder="Find a flower" class="form-control search-field"
                    [(ngModel)]="currentCN">
         </div>
         <div class="col-xs-4 bed-tab">
