--- a/client/src/app/homepage/homepage.component.html
+++ b/client/src/app/homepage/homepage.component.html
@@ -19,16 +19,20 @@
 </div>
 
 <br/>
-<p>The Horticulture Display Garden at the West Central Research and Outreach Center (WCROC) expands nearly three acres of beautifully landscaped garden beds and attractions.
-    The garden includes plantings and research from several plant breeding companies from around the world.</p>
-    We invite you to look, smell and touch, but <i>please do not dig, pick or cut any flowers or plant materials.</i>
+<h3> Welcome to the WCROC Horticulture Display Garden</h3>
+    <p>The garden includes plantings and research from several plant breeding companies from around the world.
+    We invite you to look, smell and touch, but please do not dig, pick or cut any flowers or plant materials.
+    </p>
 
-<!--Todo Add instructions :)-->
+<h4 class="instruction-font">From this page you can search for your favorite flower types in two ways:</h4>
+<ol>
+     <li> Search by a flower of your choosing and it will bring up all the different type of that flower and their location in the garden</li>
+     <li> Select a bed from the dropdown and navigate to a flower from there</li>
+</ol>
 
-<h3> See the flowers in a specific bed in two steps using our QR-Codes!</h3>
-<h3> Instructions: </h3>
-<b>Step 1)</b> Open a QR-Code Scanner App on your smartphone.<br/>
-<b>Step 2)</b> Point the camera towards the QR-Code on the sign to scan it.
+<h4>
+    Once you find your plant feel free leave feedback, which helps us improve the garden.
+</h4>
 
 <style>
     .flower-col {
@@ -36,5 +40,8 @@
     }
     .bed-col {
         width: 30%;
+    }
+    .instruction-font{
+        font-size: 1.2em;
     }
 </style>
