--- a/client/src/app/plants/bed.component.html
+++ b/client/src/app/plants/bed.component.html
@@ -1,10 +1,10 @@
 <garden-navbar-component #nav></garden-navbar-component>
 
 <ul class="list-group" style="font-size: medium">
-    <li class="list-group-item text-center" *ngIf="(plants | filterBy: {commonName: nav.currentCN}).length !== 0">
+    <li class="list-group-item text-center flower-header list-group-item-success" *ngIf="(plants | filterBy: {commonName: nav.currentCN}).length !== 0">
         <strong>Flowers</strong>
     </li>
-    <li class="text-center list-group-item list-group-item-success row" *ngIf="(plants | filterBy: {commonName: nav.currentCN}).length === 0">
+    <li class="text-center list-group-item flower-header list-group-item-success row" *ngIf="(plants | filterBy: {commonName: nav.currentCN}).length === 0">
         <strong class="col-xs-9">No flowers found for <br>"{{nav.currentCN}}"</strong>
         <i class="fa fa-spinner fa-pulse fa-3x fa-fw col-xs-3"></i>
     </li>
@@ -16,3 +16,9 @@
             {{plant.cultivar}}</span>
     </li>
 </ul>
+
+<style>
+    .flower-header {
+        background-color: #ffe87c;
+    }
+</style>
