Change the title font

--- a/client/src/app/navbar/garden-navbar.component.html
+++ b/client/src/app/navbar/garden-navbar.component.html
@@ -1,6 +1,7 @@
 <header class="navbar-fixed-top top-navbar">
     <div class="row">
-        <a class="col-xs-12 text-center" [routerLink]="['/']"><h2 class="title">Digital Display Garden</h2></a>
+        <a class="col-xs-12 text-center" [routerLink]="['/']"><h2 class="title">Digital Display Garden
+            <i class="fa fa-sun-o" aria-hidden="true"></i></h2></a>
     </div>
     <div class="row search-tab">
         <div class="searchField col-xs-8">
@@ -19,6 +20,9 @@
 <style>
     .title {
         color: gold;
+        font-family: 'Comfortaa', cursive;
+        font-size: 27px;
+        font-weight: bold;
     }
     .top-navbar {
         background-color: maroon;
