--- a/client/src/app/homepage/homepage.component.html
+++ b/client/src/app/homepage/homepage.component.html
@@ -8,7 +8,7 @@
         </tr>
         <tr *ngIf="(currentList | filterBy: {commonName: nav.currentCN}).length === 0">
             <th class="flower-col flower-header text-center list-group-item-success">No flowers found for<br> "{{nav.currentCN}}"</th>
-            <th class="flower-col flower-header text-center list-group-item-success"><i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i></th>
+            <th class="flower-col flower-header text-center list-group-item-success"><span class="x-icon"><i class="fa fa-window-close" aria-hidden="true"></i></span></th>
         </tr>
         <tr *ngFor="let each of currentList | filterBy: {commonName: nav.currentCN}">
             <td class="flower-col" (click)="this.goToPlant(['/plants', each.id])">
@@ -47,5 +47,8 @@ We invite you to look, smell and touch, but please do not dig, pick or cut any f
     }
     .flower-header {
         background-color: #ffe87c;
+    }
+    .x-icon {
+        font-size: 40px;
     }
 </style>
