--- a/client/src/app/plants/bed.component.html
+++ b/client/src/app/plants/bed.component.html
@@ -6,7 +6,7 @@
     </li>
     <li class="text-center list-group-item flower-header list-group-item-success row" *ngIf="(plants | filterBy: {commonName: nav.currentCN}).length === 0">
         <strong class="col-xs-9">No flowers found for <br>"{{nav.currentCN}}"</strong>
-        <i class="fa fa-spinner fa-pulse fa-3x fa-fw col-xs-3"></i>
+        <span class="x-icon"><i class="fa fa-window-close" aria-hidden="true"></i></span>
     </li>
     <li *ngFor="let plant of plants | filterBy: {commonName: nav.currentCN}"  class="list-group-item text-center">
         <!--Button is a hyperlink to a plant page "/plants/:plantID"-->
@@ -20,5 +20,8 @@
 <style>
     .flower-header {
         background-color: #ffe87c;
+    }
+    .x-icon {
+        font-size: 40px;
     }
 </style>
