Fix header on small screens
Issue #41

--- a/client/src/app/navbar/garden-navbar.component.html
+++ b/client/src/app/navbar/garden-navbar.component.html
@@ -21,11 +21,12 @@
     .title {
         color: gold;
         font-family: 'Comfortaa', cursive;
-        font-size: 27px;
+        font-size: 20px;
         font-weight: bold;
     }
     .top-navbar {
         background-color: maroon;
+        min-width: 320px;
     }
     .search-tab {
         color: #404D5B;
