--- a/client/src/app/navbar/garden-navbar.component.html
+++ b/client/src/app/navbar/garden-navbar.component.html
@@ -6,8 +6,7 @@
     <div class="row search-tab">
         <div class="searchField col-xs-8">
             <form>
-            <input type="text" placeholder="Type a flower name" name="searchbar" required class="form-control search-field search-box"
-            <input type="text" placeholder="Find a flower" class="form-control search-field"
+            <input type="text" placeholder="Find a flower" name="searchbar" required class="form-control search-field search-box"
                    [(ngModel)]="currentCN">
                 <button class="close-icon" type="reset"></button>
             </form>
@@ -66,8 +65,8 @@
     .close-icon:after {
         content: "x";
         display: block;
-        width: 17px;
-        height: 17px;
+        width: 22px;
+        height: 22px;
         position: absolute;
         background-color: maroon;
         z-index:1;
