--- a/client/src/app/plants/bed.component.html
+++ b/client/src/app/plants/bed.component.html
@@ -5,8 +5,7 @@
         <strong>Flowers</strong>
     </li>
     <li class="text-center list-group-item flower-header list-group-item-success row" *ngIf="(plants | filterBy: {commonName: nav.currentCN}).length === 0">
-        <strong class="col-xs-9">No flowers found for <br>"{{nav.currentCN}}"</strong>
-        <span class="x-icon"><i class="fa fa-window-close" aria-hidden="true"></i></span>
+        <strong class="col-xs-12">No flowers found for <br>"{{nav.currentCN}}"</strong>
     </li>
     <li *ngFor="let plant of plants | filterBy: {commonName: nav.currentCN}"  class="list-group-item text-center">
         <!--Button is a hyperlink to a plant page "/plants/:plantID"-->
@@ -26,5 +25,9 @@
     }
     a:active {
         background-color: #ffe87c;
+    }
+
+    .center-not-found {
+        font-size: 18px;
     }
 </style>
