Make the logo spin when searching is active

--- a/client/src/app/navbar/garden-navbar.component.html
+++ b/client/src/app/navbar/garden-navbar.component.html
@@ -1,7 +1,7 @@
 <header class="navbar-fixed-top top-navbar">
     <div class="row">
         <a class="col-xs-12 text-center" [routerLink]="['/']"><h2 class="title">Digital Display Garden
-            <i class="fa fa-sun-o" aria-hidden="true"></i></h2></a>
+            <i class="fa fa-sun-o" [class.fa-spin]="currentCN" aria-hidden="true"></i></h2></a>
     </div>
     <div class="row search-tab">
         <div class="searchField col-xs-8">
