Give space between paragraphs

--- a/client/src/app/homepage/homepage.component.html
+++ b/client/src/app/homepage/homepage.component.html
@@ -24,26 +24,23 @@
 <p>The garden includes plantings and research from several plant breeding companies from around the world.
 We invite you to look, smell and touch, but please do not dig, pick or cut any flowers or plant materials.
 </p>
-
-<h4 class="instruction-font">From this page you can search for your favorite flower types in two ways:</h4>
+<hr>
+<h4>From this page you can search for your favorite flower types in two ways:</h4>
 <ol>
      <li> Search by a flower of your choosing and it will bring up all the different type of that flower and their location in the garden</li>
      <li> Select a bed from the dropdown and navigate to a flower from there</li>
 </ol>
-
+<hr>
 <h4>
     Once you find your plant feel free leave feedback, which helps us improve the garden.
 </h4>
-
+<hr>
 <style>
     .flower-col {
         width: 70%;
     }
     .bed-col {
         width: 30%;
-    }
-    .instruction-font{
-        font-size: 1.2em;
     }
     .flower-header {
         background-color: #ffe87c;
