--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -15,16 +15,20 @@
     </div>
 
     <div *ngIf="rating === true" style="text-align:center">
-        <button type="button" style="border: none; background: inherit; outline: none;font-size:20px" class="text-success" >
-            <span class="glyphicon glyphicon-thumbs-up " aria-hidden="true"></span>
-             Liked!
+        <button type="button" (click)="this.ratePlant(null)" class="btn btn-success" >
+            <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> </span> Like
+        </button>
+        <button type="button" (click)="this.ratePlant(false)" class="btn">
+            <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"> </span> Dislike
         </button>
     </div>
 
     <div *ngIf="rating === false" style="text-align:center">
-        <button type="button" style="border: none; background: inherit; outline: none;font-size:20px" class="text-success">
-            <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
-            Disliked
+        <button type="button" (click)="this.ratePlant(true)" class="btn" >
+            <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> </span> Like
+        </button>
+        <button type="button" (click)="this.ratePlant(null)" class="btn btn-danger">
+            <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"> </span> Dislike
         </button>
     </div>
     <div *ngIf="!commented">
