--- a/client/src/app/homepage/homepage.component.html
+++ b/client/src/app/homepage/homepage.component.html
@@ -36,6 +36,7 @@ We invite you to look, smell and touch, but please do not dig, pick or cut any f
 </h4>
 <h4>
     Please delete this Line!!!
+    WOO!
 </h4>
 
 <style>
