Attempts to create an admin page to handle adding pictures
#7

--- a/client/src/app/admin/admin-component.html
+++ b/client/src/app/admin/admin-component.html
@@ -23,6 +23,11 @@
         Delete Old Data
     </button>
 
+    <br><br><button type="button" class="btn btn-primary btn-lg" [routerLink]="['/admin/PhotoManager']">
+        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+        Add / Remove / Change Photos for desired Plants.
+    </button>
+
 </div>
 
 <style>
