started uploading photos on client side
Issue: #7

--- a/client/src/app/admin/photo.component.html
+++ b/client/src/app/admin/photo.component.html
@@ -1,4 +1,21 @@
-<div>
-    Here I am, trying things out!<br><br>
-    <b>I love pineapples!</b> But not when they're under-the-sea.
+<div class="photo-page">
+    <h2>Upload a Plant Photo</h2>
+
+<form>
+    Plant ID#
+    <input type="text" id="plantID">
+    <input type="submit" value="Find">
+</form>
+
+    <div>
+        Plant
+        <button>Upload</button>
+    </div>
+
 </div>
+
+<style>
+    .photo-page {
+        margin-top: -115px;
+    }
+</style>
