--- a/client/src/app/admin/admin-component.html
+++ b/client/src/app/admin/admin-component.html
@@ -23,7 +23,7 @@
         Delete Old Data
     </button>
 
-    <br><br><button type="button" class="btn btn-primary btn-lg" [routerLink]="['/admin/PhotoManager']">
+    <br><br><button type="button" class="btn btn-primary btn-lg" [routerLink]="['/admin/PhotoComponent']">
         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
         Add / Remove / Change Photos for desired Plants.
     </button>
