--- a/client/src/app/admin/photo.component.html
+++ b/client/src/app/admin/photo.component.html
@@ -13,10 +13,19 @@
         <strong>Common Name:</strong> {{plant.commonName}}<br>
         <strong>Cultivar:</strong> {{plant.cultivar}}<br>
         <br>
-        <button class="btn btn-primary">
+
+        <file-upload #fu (change)="filename = undefined; uploadAttempted = false" [multiple]="false">-</file-upload>
+
+        <button *ngIf="filename === undefined" class="btn btn-primary" (click)="this.handleUpload()" style="margin-top: 10px">
             <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
             Upload
         </button>
+
+        <div *ngIf="filename!==undefined"> Your file was successfully uploaded as data set {{this.filename}}.
+        </div>
+        <div *ngIf="filename === undefined && uploadAttempted === true">File upload failed.</div>
+
+
     </div>
 
     <div *ngIf="!plant && clicked">
