--- a/client/src/app/admin/photo.component.html
+++ b/client/src/app/admin/photo.component.html
@@ -12,10 +12,9 @@
         <u><strong>Plant</strong></u><br>
         <strong>Common Name:</strong> {{plant.commonName}}<br>
         <strong>Cultivar:</strong> {{plant.cultivar}}<br>
-            location: {{plant.photoLocation}}
         <br>
 
-        <div>
+        <div *ngIf="plant.photoLocation">
             <img [attr.src]="this.url + 'plants/' + this.id + '/getImage'">
         </div><br>
 
