Makes the import button on the importData page disappear when clicked
Is now not possible to double-click the button

Issue #12

--- a/client/src/app/admin/import.component.html
+++ b/client/src/app/admin/import.component.html
@@ -4,7 +4,7 @@
     <file-upload #fu (change)="filename = undefined; uploadAttempted = false" [multiple]="false">-</file-upload>
 
 
-    <button *ngIf="filename === undefined" class="btn btn-primary" (click)="this.handleUpload()" style="margin-top: 10px">
+    <button *ngIf="filename === undefined && !uploadStarted" class="btn btn-primary" (click)="this.handleUpload()" style="margin-top: 10px">
         <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
         Import
     </button>
