--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -18,13 +18,13 @@
         <button type="button" (click)="this.ratePlant(null)" class="btn btn-success" >
             <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> </span> Like
         </button>
-        <button type="button" (click)="this.ratePlant(false)" class="btn">
+        <button type="button" (click)="this.changeRate(false)" class="btn">
             <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"> </span> Dislike
         </button>
     </div>
 
     <div *ngIf="rating === false" style="text-align:center">
-        <button type="button" (click)="this.ratePlant(true)" class="btn" >
+        <button type="button" (click)="this.changeRate(true)" class="btn" >
             <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"> </span> Like
         </button>
         <button type="button" (click)="this.ratePlant(null)" class="btn btn-danger">
